--- a/src/widgets/ui/elements/ServiceCard/ServiceCard.module.scss
+++ b/src/widgets/ui/elements/ServiceCard/ServiceCard.module.scss
@@ -7,9 +7,10 @@
 	flex-direction: column;
 	gap: rem(20);
 	align-items: stretch;
-	height: -webkit-min-content;
-	height: -moz-min-content;
-	height: min-content;
+	// height: -webkit-min-content;
+	// height: -moz-min-content;
+	// height: min-content;
+	height: 100%;
 
 	@media (max-width: $max-768) {
 		gap: rem(16);
